--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "d3feed",
-  "version": "0.0.1-7",
+  "version": "0.0.1-8",
   "scripts": {
     "start": "app.js"
   },
   "dependencies": {
+    "request": "2.22.0",
+    "cheerio": "0.12.0",
     "express": "3.3.4"
   }
 }
