--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
   "dependencies": {
     "request": "2.26.0",
     "cheerio": "0.12.1",
-    "express": "3.3.4",
-    "consolidate": "0.9.1",
-    "swig": "0.14.0"
+    "express": "3.3.4"
   }
 }
