--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "d3feed",
-  "version": "0.0.1-8",
+  "version": "1.0.0",
+  "author": "Alex Olshansky <i@creagenics.com> (http://creagenics.com/)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clbn/d3feed.git"
+  },
   "scripts": {
     "start": "app.js"
   },
